[package]
name = "rs052"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
serde_json = "1.0.79"
futures = "0.3.21"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.actix-web]
version = "4"
features = ["openssl"]

[dependencies.tokio]
version = "1"
features = ["full"]