[package]
name = "rs061"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9"
rbson = "2.0"
log = "0.4"
fast_log = "1.3"
serde_json = "1"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.rbatis]
version = "3.1"
default-features = false
features = ["debug_mode", "postgres", "sqlite", "runtime-actix-rustls"]

[dependencies.actix-web]
version = "4"

[dependencies.serde]
version = "1"
features = ["derive"]
