[package]
name = "rs050"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1" 
mini-redis = "0.4"
async-stream = "0.3.3"
futures-util = "0.3.21"