[package]
name = "diesel_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15"
env_logger = "0.9.0"
log = "0.4"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.diesel]
version = "1.4.8"
features = ["sqlite", "r2d2"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]
